...
        },
            ),
          ),
        ],
      ),
      floatingActionButton: canAddProduct
          ? FloatingActionButton(key: const Key('FloatingActionButton'),
              onPressed: () async {
                await Navigator.pushNamed(context, '/produk-staf-tambah');
                if (mounted) {
                  Provider.of<ProdukProvider>(
                    context,
                    listen: false,
...
